@@ -3,6 +3,7 @@ gnome-commander 1.2.1
 ---------------
 
 Bug fixes:
+ * Fixed problem with scrollkeeper database update
  
 New features:
  * New or updated translations: it
